--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     .popup-card { background: #0c0c0c; padding: 8px; border-radius: 8px; color: #fff; max-width: 280px; }
     .big-overlay { position: absolute; inset: 0; pointer-events: none; z-index: 800; display: flex; align-items: flex-start; justify-content: flex-end; padding: 18px; }
     .notice { max-width: 420px; background: rgba(0,0,0,0.65); backdrop-filter: blur(2px); padding: 12px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.03); font-size: 13px; color: var(--muted); }
-    @media(max-width:920px) { #app { grid-template-columns: 1fr; grid-template-rows: auto 1fr; } #sidebar { order: 2; height: 38vh; } #right { order: 1; } }
+    @media(max-width:920px) { #app { grid-template-columns: 1fr; grid-template-rows: 1fr auto; } #sidebar { order: 2; } #right { order: 1; } }
   </style>
 </head>
 <body>
