--- a/index.html
+++ b/index.html
@@ -3,37 +3,39 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="theme-color" content="#0b0b0f" />
+
   <title>Names in the Wind — MMIWG2S+ Tribute & Learning</title>
+  <meta name="description" content="A tribute and educational resource honoring Missing and Murdered Indigenous Women, Girls, Two-Spirit, Transgender, and Gender-Diverse People across North America." />
 
-  <meta
-    name="description"
-    content="A tribute and educational resource honoring Missing and Murdered Indigenous Women, Girls, Two-Spirit, Transgender, and Gender-Diverse People across North America."
-  />
-
+  <!-- Open Graph -->
   <meta property="og:title" content="Names in the Wind — MMIWG2S+ Tribute & Learning" />
-  <meta
-    property="og:description"
-    content="A tribute and educational tool honoring MMIWG2S+ and supporting awareness, research, and action."
-  />
+  <meta property="og:description" content="A tribute and educational tool honoring MMIWG2S+ and supporting awareness, research, and action." />
   <meta property="og:type" content="website" />
+  <meta property="og:image" content="/Names-in-the-Wind/og-thumbnail.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Names in the Wind — A Tribute to MMIWG2S+" />
 
+  <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Names in the Wind — MMIWG2S+ Tribute & Learning" />
-  <meta
-    name="twitter:description"
-    content="A tribute and educational tool honoring MMIWG2S+ and supporting awareness, research, and action."
-  />
+  <meta name="twitter:description" content="A respectful tribute and educational resource honoring MMIWG2S+." />
+  <meta name="twitter:image" content="/Names-in-the-Wind/og-thumbnail.png" />
 
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
+  <!-- Styles & App -->
   <link rel="stylesheet" href="./styles.css" />
 
   <!-- Data first, then logic -->
   <script defer src="./cases.js"></script>
   <script defer src="./app.js"></script>
+
+  <!-- Favicon -->
+  <link rel="icon" href="/Names-in-the-Wind/og-thumbnail.png" type="image/png" />
 </head>
 
 <body>
